--- a/force-app/main/default/classes/apexPage_Validataion.cls
+++ b/force-app/main/default/classes/apexPage_Validataion.cls
@@ -12,8 +12,6 @@ public class apexPage_Validataion {
     
     Public  void createLead(){
         
-        system.debug('im in createLead method');
-        
         leads = new Lead();
         leads.FirstName = firstname;
         leads.LastName = firstname;
@@ -23,10 +21,8 @@ public class apexPage_Validataion {
         
         
         System.debug('Lead : '+leads);
-        
+        //ApexPages.AddMessage(new ApexPages.Message(ApexPages.Severity.Confirm, 'operation performed Successfully.'));
         insert leads;
-                ApexPages.AddMessage(new ApexPages.Message(ApexPages.Severity.Confirm, 'operation performed Successfully.'));
-
          
         ResetObjects();
     }
