--- a/force-app/main/default/classes/apexPage_Validataion_Test.cls
+++ b/force-app/main/default/classes/apexPage_Validataion_Test.cls
@@ -1,20 +1,32 @@
 @isTest
 public class apexPage_Validataion_Test {
-
+    
     @isTest
-    Public static void testSetupData(){
+    Public static void createLead_Test(){
+        
+        test.startTest();
         
         apexPage_Validataion c = new apexPage_Validataion();
-        c.firstname = 'test_Name';
-        c.lastname = 'test_LastName';
-        c.company = 'test_company';
-        c.mobile = 1212121012;
+        c.firstname = 'firstName';
+        c.lastname = 'lastName';
+        c.mobile = 1231235421;
+        c.email = 'email121@gmail.com';
+        c.company = 'Company';
         c.termsandCondition = true;
-        
         
         c.createLead();
         
-        Lead lead = [select FirstName, LastName, Company from Lead where FirstName = 'test_Name'];
-        system.debug('lead is == ' +lead);
+        test.stopTest();
+        
+        Lead leads = [select LastName, MobilePhone, Email from Lead where LastName = 'firstName' limit 1];
+        
+        System.debug('Lead : '+leads);
+        system.debug('LastName is === >' +leads.LastName);
+        
+        system.assertEquals('firstName', leads.LastName);
+        system.assertEquals('1231235421',leads.MobilePhone);
+        system.assertEquals('email121@gmail.com', leads.Email);
+        
     }
+
 }
