--- a/force-app/main/default/classes/salesforceIntegration.cls
+++ b/force-app/main/default/classes/salesforceIntegration.cls
@@ -2,13 +2,13 @@ public class salesforceIntegration {
     
     Public static void connectTwoSalesforceOrg(){
         
-        String endpoint = 'https://june02-dev-ed.develop.my.salesforce.com/services/oauth2/token';
+        String endpoint = 'https://domain.my.salesforce.com/services/oauth2/token';
         String methodType = 'POST';
-        string userName = 'june02@roshan.com';
-        string password = '#roshan1234jR7bNOWPCG5dO2T4hplCMNca';
+        string userName = 'username';
+        string password = '#pass';
         string grantType = 'password';
-        string clientId = '3MVG9wt4IL4O5wvIxzMUMzmfTkbYBl5CtP4d5YpzDpQQkxEbC3sTL.7rG1YVPK8Mey7kv_ouE6gVuXYn4INsS';
-        string clientSecretKey = 'F7B36B1614FBC0FEB8C29623CBC21913B47D2697943BF28696369117E9CE587C';
+        string clientId = '';
+        string clientSecretKey = '';
         
         http htp = new http();
         
