--- a/force-app/main/default/classes/salesforceIntegration.cls
+++ b/force-app/main/default/classes/salesforceIntegration.cls
@@ -9,6 +9,7 @@ public class salesforceIntegration {
         string grantType = 'password';
         string clientId = '';
         string clientSecretKey = '';
+        string andccc = '';
         
         http htp = new http();
         
